update to Java named module, Gradle 6.4.1, JUnit 5